# django-nplus1

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml  tag.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/reference/api/: index.html
0.1.0/reference/changelog/: index.html
0.1.0/search/: search_index.json
0.1.0/user-guide/configuration/: index.html
0.1.0/user-guide/pytest-plugin/: index.html
0.1.0/user-guide/whitelisting/: index.html
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a1/getting-started/installation/: index.html
0.1.0a1/getting-started/quickstart/: index.html
0.1.0a1/reference/api/: index.html
0.1.0a1/reference/changelog/: index.html
0.1.0a1/user-guide/configuration/: index.html
0.1.0a1/user-guide/pytest-plugin/: index.html
0.1.0a1/user-guide/whitelisting/: index.html
0.1.0a2/: 404.html  index.html  sitemap.xml
0.1.0a2/getting-started/installation/: index.html
0.1.0a2/getting-started/quickstart/: index.html
0.1.0a2/reference/api/: index.html
0.1.0a2/reference/changelog/: index.html
0.1.0a2/user-guide/configuration/: index.html
0.1.0a2/user-guide/pytest-plugin/: index.html
0.1.0a2/user-guide/whitelisting/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/reference/api/: index.html
0.2.0/reference/changelog/: index.html
0.2.0/user-guide/configuration/: index.html
0.2.0/user-guide/pytest-plugin/: index.html
0.2.0/user-guide/whitelisting/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/getting-started/installation/: index.html
0.2.1/getting-started/quickstart/: index.html
0.2.1/reference/api/: index.html
0.2.1/reference/changelog/: index.html
0.2.1/search/: search_index.json
0.2.1/user-guide/configuration/: index.html
0.2.1/user-guide/pytest-plugin/: index.html
0.2.1/user-guide/whitelisting/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/getting-started/installation/: index.html
0.3.0/getting-started/quickstart/: index.html
0.3.0/reference/api/: index.html
0.3.0/reference/changelog/: index.html
0.3.0/user-guide/configuration/: index.html
0.3.0/user-guide/pytest-plugin/: index.html
0.3.0/user-guide/whitelisting/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/getting-started/installation/: index.html
0.3.1/getting-started/quickstart/: index.html
0.3.1/reference/api/: index.html
0.3.1/reference/changelog/: index.html
0.3.1/user-guide/configuration/: index.html
0.3.1/user-guide/pytest-plugin/: index.html
0.3.1/user-guide/whitelisting/: index.html
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/getting-started/installation/: index.html
0.3.2/getting-started/quickstart/: index.html
0.3.2/reference/api/: index.html
0.3.2/reference/changelog/: index.html
0.3.2/user-guide/configuration/: index.html
0.3.2/user-guide/pytest-plugin/: index.html
0.3.2/user-guide/whitelisting/: index.html
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/getting-started/installation/: index.html
0.3.3/getting-started/quickstart/: index.html
0.3.3/reference/api/: index.html
0.3.3/reference/changelog/: index.html
0.3.3/user-guide/configuration/: index.html
0.3.3/user-guide/pytest-plugin/: index.html
0.3.3/user-guide/whitelisting/: index.html
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/getting-started/installation/: index.html
0.3.4/getting-started/quickstart/: index.html
0.3.4/reference/api/: index.html
0.3.4/reference/changelog/: index.html
0.3.4/user-guide/configuration/: index.html
0.3.4/user-guide/pytest-plugin/: index.html
0.3.4/user-guide/whitelisting/: index.html
0.3.5/: 404.html  index.html  sitemap.xml
0.3.5/getting-started/installation/: index.html
0.3.5/getting-started/quickstart/: index.html
0.3.5/reference/api/: index.html
0.3.5/reference/changelog/: index.html
0.3.5/user-guide/configuration/: index.html
0.3.5/user-guide/pytest-plugin/: index.html
0.3.5/user-guide/whitelisting/: index.html
django_nplus1/: __init__.py  apps.py  celery.py  corpus.py  detect.py  exceptions.py  fields.py  middleware.py  mypy_settings.py  notifiers.py  patch.py  profiler.py  pytest_plugin.py  scope.py  signals.py  util.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  changelog.md
docs/user-guide/: configuration.md  corpus-mode.md  pytest-plugin.md  whitelisting.md
examples/simple/: pyproject.toml  settings.py
examples/simple/myapp/: models.py  services.py  urls.py  views.py
examples/simple/tests/: test_views.py
main/: 404.html  index.html  sitemap.xml
main/getting-started/installation/: index.html
main/getting-started/quickstart/: index.html
main/reference/api/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
main/user-guide/configuration/: index.html
main/user-guide/corpus-mode/: index.html
tests/: conftest.py  test_celery.py  test_corpus.py  test_corpus_capture.py  test_corpus_fields.py  test_corpus_plugin.py  test_corpus_xdist.py  test_detect.py  test_eager.py  test_inline_ignore.py  test_middleware.py  test_plugin.py  test_signals.py
tests/settings/: base.py  urls.py
tests/testapp/: models.py  urls.py  views.py
(+5 files in other folders)
